--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,7 +9,7 @@
     width: auto;
     height: auto;
     border-radius: 10px;
-    background-color: #21807c;
+    background-color: #8a3fbd;
     border: 3px solid black;
     font-size: 1.5em;
 
